--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,23 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>SD Hacks Hack Day</title>
-    <link rel="stylesheet" href="./main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+        background-color: #000000
+      }
+    </style>
   </head>
   <body>
+  	<canvas id="canvas" width="1500" height="850"></canvas>
+    <script src="./BurstingBalls.js"></script>
 
-    <h1> Hello World BRUHHHHHH </h1>
-      <div id= content>
-      </div>
-      <div class="form--wrapper">
-        <h1>Enter a new post</h1>
-        <form action="/posts/" method="POST">
-          <input id="title" type="text" name="title" placeholder="Title">
-          <input id="post" type="text" name="post" placeholder="Post">
-          <button b="submit--post">Submit</button>
-        </form>
-      </div>
-    <script
-      src="https://code.jquery.com/jquery-2.2.4.min.js"
-      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-      crossorigin="anonymous"
-    >
-    </script>
-    <script type="text/javascript" src="./index.js"></script>
   </body>
-</html> -->
-<!DOCTYPE HTML>
+</html>
+
+<!-- <!DOCTYPE HTML>
 <html>
   <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -114,4 +104,4 @@ $(function() {
 
     </script>
   </body>
-</html>
+</html> -->
